# eulerian-fluid

./: .gitignore  Main.hs  default.nix  eulerian-fluid.cabal  readme.org
src/: Main.hs  \
