cabal-version:      3.0

name:               eulerian-fluid
version:            0.1.0.0
synopsis:           wa'er innit

common warnings
    ghc-options: -Wall

executable eulerian-fluid
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.19.2.0,
        JuicyPixels ^>=3.3.9,
        vector ^>=0.12.3.1
    hs-source-dirs:   
    default-language: Haskell2010
